
2017-06-09  Ron Norman <rjn@inglenet.com>
	* ppparse.y,scanner.l: Fix so that OVERRIDE is passed thru the
	  preprocessor to allow variables to be redefined

2017-05-28  Ron Norman <rjn@inglenet.com>

	* field.c,typeck.c: check for misplaced operators in constant expressions

2017-05-26  Ron Norman <rjn@inglenet.com>

	Work on constant values: checks for application 78 versus internal 78
	and allow internal 78 to get handled
	Delete 78-precendence & add constant-01 and constant-78 compile options


2017-05-25  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	Work on constant values:
	* parser.y, typeck.c, tree.h: tightened syntax checks for NEXT /
	  START OF as 78 VALUE
	* typeck.c: set correct values for NEXT / START OF as 78 VALUE

2017-05-24  Ron Norman <rjn@inglenet.com>

	Work on constant values:
	* parser.y, typeck.c, tree.h: 78/CONSTANT accepts VALUE expression
	* parser.y, typeck.c, tree.h: implemented NEXT / START OF as 78 VALUE
	* ppparse.y, cobc.c, cobc.h: allow define list to be
	  searched outside of ppparse
	* parser.y, typeck.c: implemented CONSTANT FROM

2017-05-22  Ron Norman <rjn@inglenet.com>

	* codegen.c: create numeric literals with correct attributes
	   COB_FLAG_HAVE_SIGN | COB_FLAG_SIGN_SEPARATE | COB_FLAG_SIGN_LEADING 
	   As this is how the literal is coded in the COBOL code.
	  
2017-05-21  Ron Norman <rjn@inglenet.com>

	* parser.y: Accept SET vars TO SIZE OF field
	     and handle as MOVE LENGTH OF field TO vars
	  
2017-05-21  Ron Norman <rjn@inglenet.com>

	* codegen.c: create LENGTH OF field as unsigned
	  
2017-05-20  Ron Norman <rjn@inglenet.com>

	* codegen.c,tree.c,tree.h,typeck.c,codeoptim.c: 
	  Enhancements to handle nested OCCURS DEPENDING ON including -fodoslide

2017-05-14  Ron Norman <rjn@inglenet.com>

	* typeck.c (cb_build_binary_op): use integer arithmetic for compile
	  time configuration instead of (pow)

2017-05-01  Ron Norman <rjn@inglenet.com>

	* parser.y, typeck.c, tree.h: Implement arithmetic-osvs for